--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
+    <div class="playerScreen" id="p1"></div>
+    <div class="playerScreen" id="p2"></div>
+
     <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
     <script src = "assets/javascript/app.js"></script>
 </body>
